Fixed horizontal scroll bug

--- a/src/resources/sass/pages/_blog-win.scss
+++ b/src/resources/sass/pages/_blog-win.scss
@@ -178,7 +178,7 @@
 
   &-posts {
     overflow-y: auto;
-
+    overflow-x: hidden;
     @media screen and (max-width: 680px) {
       margin-left: -5px;
       margin-right: -5px;
@@ -186,6 +186,9 @@
 
     @media screen and (min-width: 992px) {
       padding-right: 10px;
+      padding-left: 10px;
+      margin: 0 -10px;
+
     }
 
     &::-webkit-scrollbar-track {
@@ -706,10 +709,7 @@
   display: flex;
   flex-flow: row wrap;
   align-items: center;
-  margin-top: 10px;
-  margin-bottom: -5px;
-  margin-left: -20px;
-  margin-right: -20px;
+  margin: 10px -10px -5px;
   padding: 20px;
   background-color: $color-cloud;
 
